force-app/main/default/objects/SMS_Delivery_Status__e/SMS_Delivery_Status__e.object-meta.xml
<CustomObject>
    <label>SMS Delivery Status</label>
    <pluralLabel>SMS Delivery Status</pluralLabel>
</CustomObject>