force-app/main/default/objects/SMS_Delivery_Status__e/fields/App_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Id__c</fullName>
    <label>App Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>