force-app/main/default/objects/SMS_Delivery_Status__e/fields/Arrival_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Timestamp__c</fullName>
    <label>Arrival Timestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>