force-app/main/default/objects/SMS_Delivery_Status__e/fields/Awsaccountid__c.field-meta.xml
<CustomField>
    <fullName>Awsaccountid__c</fullName>
    <label>Awsaccountid</label>
    <length>20</length>
    <type>Text</type>
</CustomField>