force-app/main/default/objects/SMS_Delivery_Status__e/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>