force-app/main/default/objects/SMS_Delivery_Status__e/fields/Customer_context__c.field-meta.xml
<CustomField>
    <fullName>Customer_context__c</fullName>
    <label>Customer context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>