force-app/main/default/objects/SMS_Delivery_Status__e/fields/Destination_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Phone_Number__c</fullName>
    <label>Destination Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>