force-app/main/default/objects/SMS_Delivery_Status__e/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <label>Event Timestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>