force-app/main/default/objects/SMS_Delivery_Status__e/fields/Event_version__c.field-meta.xml
<CustomField>
    <fullName>Event_version__c</fullName>
    <label>Event version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>