force-app/main/default/objects/SMS_Delivery_Status__e/fields/ISO_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>ISO_Country_Code__c</fullName>
    <label>ISO Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>