force-app/main/default/objects/SMS_Delivery_Status__e/fields/mcc_mnc__c.field-meta.xml
<CustomField>
    <fullName>mcc_mnc__c</fullName>
    <label>mcc mnc</label>
    <length>20</length>
    <type>Text</type>
</CustomField>