force-app/main/default/objects/SMS_Delivery_Status__e/fields/Message_id__c.field-meta.xml
<CustomField>
    <fullName>Message_id__c</fullName>
    <label>Message id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>