force-app/main/default/objects/SMS_Delivery_Status__e/fields/Message_type__c.field-meta.xml
<CustomField>
    <fullName>Message_type__c</fullName>
    <label>Message type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>