force-app/main/default/objects/SMS_Delivery_Status__e/fields/No_of_message_parts__c.field-meta.xml
<CustomField>
    <fullName>No_of_message_parts__c</fullName>
    <label>No of message parts</label>
    <length>20</length>
    <type>Text</type>
</CustomField>