force-app/main/default/objects/SMS_Delivery_Status__e/fields/Origination_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Origination_phone_number__c</fullName>
    <label>Origination phone number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>