force-app/main/default/objects/SMS_Delivery_Status__e/fields/Price_in_millicents_usd__c.field-meta.xml
<CustomField>
    <fullName>Price_in_millicents_usd__c</fullName>
    <label>Price in millicents usd</label>
    <length>20</length>
    <type>Text</type>
</CustomField>