force-app/main/default/objects/SMS_Delivery_Status__e/fields/Record_status__c.field-meta.xml
<CustomField>
    <fullName>Record_status__c</fullName>
    <label>Record status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>