force-app/main/default/objects/SMS_Delivery_Status__e/fields/Sender_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Sender_Request_Id__c</fullName>
    <label>Sender Request Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>