force-app/main/default/objects/SMS_Delivery_Status__e/fields/Trace_id__c.field-meta.xml
<CustomField>
    <fullName>Trace_id__c</fullName>
    <label>Trace id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>